# url-shortener

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile old  Makefile.toml  config.yaml  report.json
.devcontainer/: devcontainer.json
.github/: renovate.json
.github/workflows/: test-pr.yml
src/: configuration.rs  lib.rs  main.rs  routes.rs  surreal.rs
tests/: health_check.rs  redirect_url.rs
