[package]
name = "url_shortener"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "url_shortener"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.163"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9" }
tokio = { version = "1.28.1", features = ["time", "macros", "tokio-macros"] }
warp = { version ="0.3.5", default-features = false, features = ["tokio-rustls", "websocket"] }


[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Optimize for binary size

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0
