[package]
name = "url_shortener"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "url_shortener"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.3", default-features = false, features = ["yaml", "yaml-rust"] }
serde = "1.0.163"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9", features = ["kv-mem"] }
tokio = { version = "1.28.1", features = ["time", "macros", "tokio-macros"] }
uuid = { version = "1.3.3", default-features = false }
warp = { version ="0.3.5", default-features = false, features = ["tokio-rustls", "websocket"] }


[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Optimize for binary size
strip = true  # Automatically strip symbols from the binary.

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
reqwest = "0.11.18"
