[package]
name = "url_shortener"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "url_shortener"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
serde = { default-features = false, version = "1.0.190" }
surrealdb = { version = "1.0.0", features = ["kv-mem"], default-features = false }
tokio = { version = "1.33.0", features = ["macros"], default-features = false }
tracing = { default-features = false, version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["ansi", "env-filter"], default-features = false }
uuid = { version = "1.5.0", default-features = false }
validator = "0.16.1"
warp = { version ="0.3.6", default-features = false }


[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Optimize for binary size
strip = true  # Automatically strip symbols from the binary.

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0

[dev-dependencies]
cargo-husky = { version = "=1.5.0", default-features = false, features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
reqwest = "=0.11.22"
